syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.benslabbert.fm.iam.proto";
option java_outer_classname = "Iam";
option objc_class_prefix = "HLW";

package com.github.benslabbert.fm.iam.proto;

service IamService {
  rpc login (LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginResponse {
  oneof login {
    string token = 1;
    string failure_reason = 2;
  }
}
